# firebase-secrets-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  lib.rs  main.rs
src/firebase/: builder.rs  interface.rs  mod.rs
