[package]
name = "firebase-secrets-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"


[[bin]]
name = "firebase-secrets-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.6.1"
thiserror = "1.0.38"
